# grob

./: .codeql-suppressions.csv  .containerignore  .dockerignore  .gitignore  .gitleaksignore  .lycheeignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRACTS.md  CONTRIBUTING.md  Cargo.toml  Containerfile  DCI-REPORT.md  Dockerfile  Dockerfile.unikernel  LICENSE  LICENSING.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  build.sh  capabilities.md  cliff.toml  codecov.yml  deny.toml  grob-kube.yml  grob-openai-logged.toml  grob.container  kraft.yaml  llms.txt  prek.toml  release-plz.toml  renovate.json
.cargo/: audit.toml  config.toml  mutants.toml
.config/: nextest.toml
.github/: CODEOWNERS
.github/workflows/: audit-cron.yml  auto-merge-release.yml  auto-update-branch.yml  ci-docs-shim.yml  ci.yml  cla.yml  cleanup-branches.yml  codeql.yml  docs-lint.yml  nightly.yml  release-plz.yml  release.yml  semgrep.yml  shellcheck.yml  sync-main.yml  unikernel.yml
benches/: classify.rs  hotpath.rs  http_overhead.rs  policy.rs  proxy_overhead.rs  routing.rs
config/: claude-max-oauth.example.toml  default.example.toml  models.example.toml
config/templates/: radin.toml  riche.toml
demo/: run.sh  tmux-layout.sh
deploy/: docker-compose.yml  grob-kube.yml  grob.container  grob.volume  seccomp.json
deploy/demo/: Containerfile  Containerfile.tools  Makefile  README.md  audit-loki.sh  demo.kube.yaml  docker-compose.yml  gen-kube.py  gen-kube.sh  grob.config.toml  init-keys.sh  mock-backend.conf  prometheus.yaml  seed.sh  tools.config.toml  watcher.sh
deploy/grafana/: README.md  grob-overview.json  grob-rssi-business.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  DCI-REPORT.md  OAUTH_SETUP.md  OAUTH_TESTING.md  PROVIDERS.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  design-principles.md  gemini-integration.md  grafana-dashboard.json  index.md  openai-compatibility.md  openapi.yaml  responses-api-compatibility.md
docs/decisions/: 0000-template.md  0001-static-config-no-hot-reload.md  0002-custom-oauth-no-crate.md  0003-regex-routing-engine.md  0004-persistent-spend-tracking.md  0005-anthropic-native-provider-trait.md  0006-policy-engine-encrypted-audit-hit-gateway.md  0007-hit-federated-multisig.md  0007-openai-compat-dual-surface.md  0008-wizard-lifecycle.md  0009-pledge-structural-tool-filtering.md  0010-universal-tool-layer.md  0011-control-engine-mcp-tools.md  0012-no-unikernel.md  0013-storage-files-no-redb.md  0014-mesh-wireguard-kiss.md  0015-indirect-prompt-injection-coverage.md  0016-decision-tokens-transparent-routing.md  0017-sokolsky-log-backend.md  0018-nature-inspired-routing.md  0019-ema-stigmergy-endpoint-scoring.md  0020-hedged-requests.md  0022-declarative-endpoints-policies-schema.md  0023-preset-naming-and-composition.md  0024-preset-as-compliance-template.md  0025-rpc-mutation-transactionality.md  0026-model-name-canonicalization-policy.md  0027-adopt-system-oauth-credentials.md  0028-open-core-boundary.md  0029-relicense-core-apache.md
docs/design/: 000-template.md
docs/diagrams/: ci-cd-pert.md
docs/examples/: chatgpt-codex-oauth.toml  claude-max-oauth.toml  deepseek.toml  mixed.toml  models.toml  ollama.toml  sdk-node.md  sdk-python.md
docs/explanation/: architecture.md  design-principles.md  hit-quorum.md  otlp-exemplars.md  policies.md  security.md
docs/how-to/: auto-tune-routing.md  build-unikernel.md  configure-simhash-cache.md  configure.md  contribute.md  deploy.md  dlp.md  gemini-integration.md  manage-secrets.md  oauth-setup.md  providers.md  use-grob-hint.md  verify-hedge-cancellation-billing.md
docs/reference/: api-compatibility.md  authentication.md  benchmarks.md  caching.md  cli.md  configuration.md  dci-report-dlp.md  dci-report-responses-compat.md  dci-report.md  dlp-indirect-injection.md  dlp.md  errors.md  fan-out.md  features.md  hit-scoring.md  observability.md  openai-compatibility.md  operations.md  owasp-llm-top10.md  providers.md  responses-api-compatibility.md  routing.md  security.md  setup-wizard.md  storage.md
docs/slices/: MANIFEST.md
docs/tutorials/: getting-started.md  quickstart.md
examples/: oauth_login.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_openai_translation.rs  fuzz_router.rs  fuzz_sse_parse.rs
presets/: cheap.toml  eu-ai-act.toml  eu-eco.toml  eu-max.toml  eu-pro.toml  eu.toml  fast.toml  gdpr.toml  index.toml  local.toml  medium.toml  optimal.toml  perf.toml  ultra-cheap.toml
profiles/: full-opti-v5.toml
scripts/: build-podman.sh  build.sh  cleancode-audit.sh  codeql-check.sh  install-rootless.sh  install.sh  mutation-pr.sh  run_tests.sh
src/: acme.rs  config.rs  instance.rs  lib.rs  main.rs  net.rs  otel.rs  pid.rs  preset.rs  pricing.rs  traits.rs
src/auth/: README.md  auto_flow.rs  device_code.rs  jwt.rs  mod.rs  oauth.rs  refresh_daemon.rs  system_creds.rs  token_store.rs  virtual_keys.rs
src/cache/: README.md  mod.rs  response_cache.rs  simhash.rs
src/cli/: README.md  args.rs  config.rs  defaults.rs  mod.rs  newtypes.rs  validation.rs
src/commands/: README.md  bench.rs  common.rs  completions.rs  config_diff.rs  config_promote.rs  config_rollback.rs  connect.rs  credential_check.rs  doctor.rs  env.rs  exec.rs  harness.rs  init.rs  key.rs  logs.rs  mod.rs  model.rs  preset.rs  restart.rs  rpc_client.rs  run.rs  secrets.rs  setup.rs  setup_completions.rs  spend.rs  start.rs  status.rs  stop.rs  upgrade.rs  validate.rs
src/control/: README.md  engine.rs  mod.rs
src/features/: mod.rs
src/message_tracing/: mod.rs
src/models/: README.md  config.rs  extensions.rs  mod.rs  spend_data.rs
src/preset/: README.md  credentials.rs  mod.rs  sync.rs  validation.rs
src/providers/: README.md  anthropic_compatible.rs  anthropic_sanitize.rs  auth.rs  base.rs  constants.rs  error.rs  gemini.rs  helpers.rs  key_pool.rs  mod.rs  openai.rs  registry.rs  streaming.rs
src/router/: classify.rs  inference.rs  message.rs  mod.rs  rules.rs  tests.rs  tier_match.rs
tests/: E2E_STRATEGY.md  lib.rs  prompt_caching_comprehensive_test.rs  prompt_caching_test.rs
(+555 files in other folders)
