[package]
name = "grob"
version = "0.8.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "High-performance LLM routing proxy — routes to Anthropic, OpenAI, Gemini, DeepSeek, Ollama & more with streaming, tool calling, and multi-provider fallback"
repository = "https://github.com/azerozero/grob"
keywords = ["llm", "proxy", "router", "openai", "anthropic"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "grob"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
# Web Framework
axum = "0.7"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots"] }
bytes = "1"
pin-project = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Configuration
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
anyhow = "1"
thiserror = "1"

# Utilities
once_cell = "1"            # Lazy statics
async-trait = "0.1"        # Async trait support
dirs = "5"                 # User directories
regex = "1"                # Regular expressions
uuid = { version = "1.0", features = ["v4", "serde"] }  # UUID generation for streaming

# Auth
base64 = "0.22"            # Base64 encoding
sha2 = "0.10"              # SHA-256 for PKCE
rand = "0.8"               # Random generation for PKCE
chrono = { version = "0.4", features = ["serde"] }  # Timestamps
url = "2"                  # URL parsing
secrecy = "0.8"            # Secure secret handling

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
subtle = "2.6.1"

# DLP (Data Loss Prevention)
aho-corasick = "1.1"
memchr = "2"
hmac = "0.12"

# Storage (embedded key-value store)
redb = "2"

# Caching (high-performance concurrent cache with TTL)
moka = { version = "0.12", features = ["future"] }

# JWT Auth
jsonwebtoken = "9"

# Security (HDS/PCI/SecNumCloud compliance)
p256 = { version = "0.13", features = ["ecdsa"] }  # ECDSA P-256 for audit signing
ecdsa = "0.16"                                      # ECDSA traits
tower = "0.5"                                       # Rate limiting middleware
tower-http = { version = "0.6", features = ["limit", "trace", "cors"] }
unicode-normalization = "0.1"                       # Homoglyph attack prevention
aes-gcm = "0.10"                                    # AES-256-GCM encryption
argon2 = "0.5"                                      # Key derivation
hex = { version = "0.4", features = ["serde"] }      # Hex encoding/decoding

# Security headers
http = "1"

# TLS (optional, for native HTTPS without reverse proxy)
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }

# Allocator (jemalloc replaces musl's slow malloc for ~20% better throughput)
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }  # Unix signals

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1"
criterion = "0.5"          # Benchmarking
tempfile = "3"             # Temporary directory testing

# Property Testing
proptest = "1"

[[bench]]
name = "routing"
harness = false

[features]
default = []
tls = ["axum-server", "rustls", "rustls-pemfile"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
