[package]
name = "grob-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
grob = { path = ".." }
serde_json = "1"

# Prevent this from interfering with workspace
[workspace]

[[bin]]
name = "fuzz_sse_parse"
path = "fuzz_targets/fuzz_sse_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_router"
path = "fuzz_targets/fuzz_router.rs"
test = false
doc = false

[[bin]]
name = "fuzz_openai_translation"
path = "fuzz_targets/fuzz_openai_translation.rs"
test = false
doc = false
